# grpc-proj

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  INSTRUCTIONS  base.Dockerfile  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
protos/: do_work.proto
serviceA/: CMakeLists.txt  Dockerfile  main.cc
serviceB/: CMakeLists.txt  Dockerfile  main.cc
serviceC/: CMakeLists.txt  Dockerfile  main.cc
